<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_maps"
        android:title="@string/maps"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

</menu>
